--- a/.github/workflows/master_kwan-dashboard.yml
+++ b/.github/workflows/master_kwan-dashboard.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
+          npm install --force
+          
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
